--- a/ansible/base/windows/base.yml
+++ b/ansible/base/windows/base.yml
@@ -3,23 +3,138 @@
 - hosts: all
   remote_user: Administrator
   gather_facts: false
-  tasks:
-  - name: Install required packages
-    win_chocolatey:
-      name:
-        - 7zip
-        - awscli
-        - awstools.powershell
-        - directx-sdk
-        - dotnet3.5
-        - dotnetfx
-        - git
-        - gpg4win
-        - jdk8
-        - nxlog
-        - p4
-        - python2
-        - sysmon
-        - vcredist2013
-        - visualstudio2019buildtools
 
+  tasks:
+    - name: Install packages
+      win_chocolatey:
+        name: "{{ item.name }}"
+        version: "{{ item.version | default(omit) }}"
+        package_params: "{{ item.package_params | default(omit) }}"
+        state: "{{ item.state | default('present') }}"
+        architecture: "{{ item.architecture | default(omit) }}"
+        install_args: "{{ item.install_args | default(omit) }}"
+        timeout: "{{ item.timeout | default(omit) }}"
+        force: "{{ item.force | default(omit) }}"
+      with_items:
+          - { name: 7zip, version: '19.0' }
+          - { name: awscli, version: '2.0.41' }
+          - { name: awstools.powershell, version: '1.1.1120.20130916' }
+          - { name: directx-sdk, version: '9.29.1962.0' }
+          - { name: dotnet3.5, version: '3.5.20160716'}
+          - { name: dotnetfx, version: '4.8.0.20190930' }
+          - { name: git, version: '2.28.0' }
+          - { name: gpg4win, version: '3.1.12' }
+          - { name: jdk8, version: '8.0.211' }
+          - { name: nxlog, version: '2.10.2150' }
+          - { name: p4, version: '2020.1' }
+          - { name: python2, version: '2.7.18' }
+          - { name: sysmon, version: '11.11' }
+          - { name: unreal-linux-toolchain, version: '15.8.0.1', package_params: '/DIRECTORY:C:\UE-Toolchain-v15' }
+          - { name: vcredist2013, version: '12.0.40660.20180427' }
+          - { name: visualstudio2019professional, version: '16.7.0.0', package_params: "--allWorkloads --includeRecommended --includeOptional --passive --locale en-US" }
+      ignore_errors: true
+
+    - name: Install pip packages
+      win_shell: pip install awscli
+
+    - name: Create Jenkins folder
+      win_file:
+        path: C:\Jenkins
+        state: directory
+
+    # Add exclusions for Windows defender
+    # https://github.com/PowerShell/xDefender
+    - name: Add Windows Defender PowerShell module
+      win_psmodule:
+        name: WindowsDefender
+        state: present
+
+    - name: Add Windows Defender path exclusions
+      win_dsc:
+        resource_name: WindowsDefender
+        IsSingleInstance: 'Yes'
+        ExclusionPath:
+          - 'C:\Jenkins'
+
+    - name: Add firewall rules
+      win_firewall_rule:
+        name: "{{ item.name }}"
+        action: "{{ item.action }}"
+        direction: "{{ item.direction }}"
+        enabled: "{{ item.enabled }}"
+        localip: "{{ item.localip | default(omit) }}"
+        localport: "{{ item.localport | default(omit) }}"
+        protocol: "{{ item.protocol }}"
+        remoteip: "{{ item.remoteip | default(omit) }}"
+        remoteport: "{{ item.remoteport | default(omit) }}"
+        state: "{{ item.state }}"
+      loop:
+        - name: Valorant Firewall Ports
+          action: allow
+          direction: in
+          enabled: yes
+          localip: any
+          localport: 8008-8009
+          protocol: tcp
+          remoteip: any
+          remoteport: any
+          state: present
+        - name: ICMP Allow incoming V4 echo request
+          action: allow
+          direction: in
+          enabled: yes
+          profiles: private
+          protocol: icmpv4
+          state: present
+
+    - name: Add Windows registry keys
+      win_regedit:
+        path: "{{ item.path }}"
+        name: "{{ item.name }}"
+        data: "{{ item.data }}"
+        type: "{{ item.type }}"
+      loop:
+        - path: HKLM:\SYSTEM\CurrentControlSet\services\AFD\Parameters
+          name: DefaultReceiveWindow
+          data: 10000
+          type: dword
+        - path: HKLM:\SYSTEM\CurrentControlSet\services\AFD\Parameters
+          name: DefaultSendWindow
+          data: 200000s
+          type: dword
+        - path: HKLM:\SYSTEM\CurrentControlSet\services\AFD\Parameters
+          name: DynamicSendBufferDisable
+          data: 0
+          type: dword
+
+    - name: Add Windows environment variables
+      win_environment:
+        name: "{{ item.name }}"
+        state: "{{ item.state | default(omit) }}"
+        level: "{{ item.level }}"
+        value: "{{ item.value | default(omit) }}"
+      loop:
+        - name: P4CHARSET
+          level: machine
+          value: utf8
+        - name: LINUX_MULTIARCH_ROOT
+          level: machine
+          value: C:\UE-Toolchain-v15
+
+    - name: Add to Windows path environment variable
+      win_path:
+        name: "{{ item.name | default(omit) }}"
+        state: "{{ item.state | default(omit) }}"
+        scope: "{{ item.scope | default(omit) }}"
+        elements: "{{ item.elements }}"
+      loop:
+        - elements:
+            - C:\bin
+            - C:\Program Files (x86)\Xoreax\IncrediBuild
+
+    - name: Set C pagefile, override if exists
+      win_pagefile:
+        drive: C
+        initial_size: 31720000
+        maximum_size: 102400000
+        state: present
